remove fastify and puted cors

--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@prisma/client": "^5.15.1",
+    "@fastify/cors": "^7.0.0",
+    "@prisma/client": "^5.16.2",
+    "@types/fastify-cors": "^2.1.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "express": "^4.19.2",
     "fastify": "^4.28.0",
     "fastify-cors": "^6.1.0",
     "zod": "^3.23.8"
